base/hello-world-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: hello-world
